<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="30dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_to_continue"
                android:textColor="@color/red"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                />

            <EditText
                android:id="@+id/loginNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_input"
                android:hint="@string/number"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:animateLayoutChanges="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/login"
                    android:background="@drawable/button_background"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>


            <TextView
                android:id="@+id/noAccountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:gravity="center"
                android:text="No Account Yet? Register Here"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>