<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RecipientActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_gravity="center_horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create Recipient Account"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                />

            <!--<EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_input"
                android:hint="Name"
                android:drawablePadding="15dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/select_country"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="60dp"
                    app:ccp_textSize="13sp"
                    android:padding="2dp"
                    android:background="@drawable/background_input"
                    android:layout_gravity="center"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_showPhoneCode="false"
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                tools:ignore="TextFields" />


            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/number"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />
            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="Blood Group"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <Spinner
                    android:id="@+id/bloodGroupSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Gender"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginRight="16dp"
                    android:paddingLeft="16dp"
                    />
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/maleRadioOption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Male"
                        android:onClick="checkButton"
                        tools:ignore="UsingOnClickInXml" />

                    <RadioButton
                        android:id="@+id/femaleDonorRadioOption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Female"
                        android:onClick="checkButton"
                        tools:ignore="UsingOnClickInXml" />

                </RadioGroup>


            </LinearLayout>

            <EditText
                android:id="@+id/dobEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="Date of Birth"
                android:drawableEnd="@drawable/calendar"
                android:drawableTint="@color/red"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"
                android:hint="Address"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:animateLayoutChanges="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/register"
                    android:background="@drawable/button_background"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    />

            </FrameLayout>

            <TextView
                android:id="@+id/haveAccountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />


        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>