<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UpdateProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/red">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/back"
                android:tint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="Update Profile"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/constraint_layout"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/background_input"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textAutoComplete"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        tools:ignore="TextFields" />

                    <EditText
                        android:id="@+id/phoneNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_input"
                        android:hint="@string/number"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textAutoComplete"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        tools:ignore="TextFields" />

                    <EditText
                        android:id="@+id/lastDonateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_input"
                        android:hint="Last Donate"
                        android:drawableEnd="@drawable/calendar"
                        android:drawableTint="@color/red"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textAutoComplete"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textColor="@color/black"
                        android:textSize="13sp" />



                    <EditText
                        android:id="@+id/addressEditText"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_input"
                        android:hint="Address"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textAutoComplete"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/districtEditText"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_input"
                        android:hint="@string/district"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textAutoComplete"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textColor="@color/black"
                        android:textSize="13sp" />




                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:animateLayoutChanges="true">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/updateButton"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/button_background"
                            android:text="@string/update"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:cornerRadius="8dp" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:visibility="invisible" />

                    </FrameLayout>


                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>